Correct z-index of the header

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -6,6 +6,7 @@
   animation: scrolling-header linear both;
   animation-timeline: scroll(root);
   animation-range: 0 200px;
+  z-index: 2;
 }
 
 .header__wrapper {
